--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   build-test:
     runs-on: ubuntu-latest
+    env:
+      NPM_CONFIG_PRODUCTION: 'false'
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
