ci: install dev deps correctly in CI (npm ci --include=dev) - fix YAML indentation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           cache: npm
-      - run: npm ci
+      - run: npm ci --include=dev
       - name: Lint
         run: npm run lint
       - name: Build
