ci: ensure web devDependencies installed (explicit npm install for apps/web)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           cache: npm
       - run: npm ci --include=dev
+      - name: Ensure web workspace devDeps
+        run: npm install --workspace=apps/web --include=dev
       - name: Lint
         run: npm run lint
       - name: Build
