--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "next": "15.5.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.3",
+    "autoprefixer": "^10.4.21",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -18,10 +21,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
