--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,29 +7,16 @@ on:
 jobs:
   build-test:
     runs-on: ubuntu-latest
-    env:
-      NPM_CONFIG_PRODUCTION: 'false'
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           cache: npm
       - run: npm ci --include=dev
-      - name: Install web workspace devDependencies
-        run: npm ci --include=dev
-        working-directory: apps/web
-
-      - name: Verify tailwindcss is installed (debug)
-        run: |
-          echo "Listing apps/web/node_modules (first 50 entries):"
-          ls -la apps/web/node_modules | head -n 50 || true
-          echo "Attempting to resolve tailwindcss from apps/web:" 
-          node -e "try{console.log(require.resolve('tailwindcss'))}catch(e){console.error('resolve failed:', e.message); process.exit(1)}"
-        working-directory: apps/web
       - name: Lint
         run: npm run lint
       - name: Build
-        run: npm run build
+        run: npm run build --workspaces --if-present
       - name: Unit & Contract Tests
         run: npm test --workspaces -- --coverage
       - name: OpenAPI Lint
