--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,19 @@ jobs:
           npm ci
           npm run -w apps/api build
           npm run -w apps/web build
-      # Platzhalter: Blue/Green auf EU-PaaS (Fly.io). Aktivierung in späterer Phase.
       - name: Prepare release artifact
         run: tar -czf release_${{ inputs.env }}.tgz apps/api/dist apps/web/.next
       - uses: actions/upload-artifact@v4
         with:
           name: release_${{ inputs.env }}
           path: release_${{ inputs.env }}.tgz
+
+      # --- Deployment-Schritt für Fly.io ---
+      # Nutzt die offizielle Action, um die Anwendung in der EU-Region (Frankfurt)
+      # basierend auf der umgebungsspezifischen Konfigurationsdatei bereitzustellen.
+      - name: Deploy to Fly.io
+        uses: superfly/fly-pr-review-apps@v1
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+        with:
+          args: "deploy --region fra --config fly.${{ inputs.env }}.toml --detach"
