--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "@vitest/coverage-v8": "^3.2.4",
+    "eslint": "^9.37.0",
+    "typescript-eslint": "^8.45.0",
     "vitest": "^3.2.4"
   }
 }
