--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lokaltreu",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "directories": {
     "doc": "docs"
@@ -20,10 +21,7 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@eslint/js": "^9.37.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "eslint": "^9.37.0",
-    "typescript-eslint": "^8.45.0",
     "vitest": "^3.2.4"
   }
 }
