--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@next/eslint-plugin-next": "^15.5.4",
+    "@typescript-eslint/parser": "^8.45.0",
     "@vitest/coverage-v8": "^3.2.4",
+    "eslint": "^9.37.0",
+    "typescript-eslint": "^8.45.0",
     "vitest": "^3.2.4"
   }
 }
