--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,12 +40,13 @@ jobs:
         # Entpackt das Artefakt. Die Struktur `apps/api/dist` und `apps/web/.next` wird im Workspace wiederhergestellt.
         run: tar -xzf release_${{ inputs.env }}.tgz
 
-      # --- Deployment-Schritt für Fly.io ---
-      # Nutzt die offizielle Action, um die Anwendung in der EU-Region (Frankfurt)
-      # basierend auf der umgebungsspezifischen Konfigurationsdatei bereitzustellen.
-      - name: Deploy to Fly.io
-        uses: superfly/fly-pr-review-apps@v1
+      # --- Deployment-Schritte für Fly.io ---
+      # 1. flyctl (CLI) installieren
+      - name: Set up flyctl
+        uses: superfly/flyctl-actions/setup-flyctl@master
+
+      # 2. Anwendung mit der umgebungsspezifischen Konfiguration deployen
+      - name: Deploy app to Fly.io
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-        with:
-          args: "deploy --region fra --config fly.${{ inputs.env }}.toml --local-only"
+        run: flyctl deploy --region fra --config fly.${{ inputs.env }}.toml --local-only
