--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,4 +49,4 @@ jobs:
       - name: Deploy app to Fly.io
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-        run: flyctl deploy --region fra --config fly.${{ inputs.env }}.toml --local-only
+        run: flyctl deploy --config fly.${{ inputs.env }}.toml --local-only
