--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,8 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    env: # Definiere den Token für den gesamten Job
+      FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
     environment: ${{ inputs.env }}
     steps:
       - uses: actions/checkout@v4 # Checkout is needed for fly.toml
@@ -47,6 +49,4 @@ jobs:
 
       # 2. Anwendung mit der umgebungsspezifischen Konfiguration deployen
       - name: Deploy app to Fly.io
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         run: flyctl deploy --config fly.${{ inputs.env }}.toml --local-only
