fix(cd): pass access-token explicitly to flyctl deploy for robust authentication

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,4 +49,5 @@ jobs:
 
       # 2. Anwendung mit der umgebungsspezifischen Konfiguration deployen
       - name: Deploy app to Fly.io
-        run: flyctl deploy --config fly.${{ inputs.env }}.toml --local-only
+        run: flyctl deploy --config fly.${{ inputs.env }}.toml --local-only --access-token ${{ secrets.FLY_API_TOKEN }}
+        
