--- a/.gitignore
+++ b/.gitignore
@@ -1,97 +1,19 @@
-<<<<<<< HEAD
-node_modules
-# Next.js / Build
-.DS_Store
 # Node
 node_modules/
-
-# Build output
-apps/web/.next/
-apps/web/out/
-apps/**/dist/
-dist/
-
-# Logs
-logs
-*.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
 
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+# Next.js
+.next/
+out/
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# Build
+dist/
+apps/**/dist/
 
-# Coverage
-coverage/
-*.lcov
-.nyc_output
-
-# Misc caches
-.cache
-.parcel-cache
-.vite
-.parcel-cache
-
-# Dependency directories
-jspm_packages/
-web_modules/
-.pnp.*
-.yarn/*
-
-# TypeScript
-*.tsbuildinfo
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Optional stylelint cache
-.stylelintcache
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variable files
-.env
+# Env
 .env.*
 !.env.example
 
-# Terraform
-**/.terraform/*
-*.tfstate
-*.tfstate.*
-.terraform.lock.hcl
-
-# Next/other frameworks
-.next
-out
-.nuxt
-dist
-.vuepress/dist
-.svelte-kit/
-**/.vitepress/dist
-.docusaurus
-.serverless/
-.firebase/
-
-# VSCode
-.vscode-test
-
-# OS files
+# OS/IDE
 .DS_Store
-out
+.vscode-test
