--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version-file: '.nvmrc'
-          cache: 'npm'
+          node-version-file: .nvmrc
+          cache: npm
 
       - run: npm ci --include=dev
 
@@ -40,3 +40,10 @@ jobs:
         with:
           name: coverage
           path: "**/coverage/**"
+
+      - name: CI Summary
+        run: |
+          echo "## CI Artefakte" >> "$GITHUB_STEP_SUMMARY"
+          echo "- Dist: download im Run → Artifacts (**dist**)" >> "$GITHUB_STEP_SUMMARY"
+          echo "- Coverage: download im Run → Artifacts (**coverage**)" >> "$GITHUB_STEP_SUMMARY"
+          echo "- OpenAPI Lint: ✔️ via Redocly CLI" >> "$GITHUB_STEP_SUMMARY"
