--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,24 @@
 name: deploy
+
 on:
   workflow_dispatch:
     inputs:
       env:
+        description: "Ziel-Umgebung"
         type: choice
         options: [dev]
         default: dev
-  push:
-    branches: [main]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    # Bei workflow_dispatch: gewähltes env, bei push: 'dev'
-    environment: ${{ github.event.inputs.env || 'dev' }}
+    environment: ${{ inputs.env }}
     env:
       FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN_DEV || secrets.FLY_API_TOKEN }}
 
     steps:
       - uses: actions/checkout@v4
 
-      # Optional (nicht zwingend für remote-only Build, aber ok)
       - uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
