--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,9 @@
     "start": "node dist/index.js",
     "lint": "eslint ."
   },
+  "engines": {
+  "node": ">=20 <23"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
