--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint",
     "test": "vitest run"
   },
+  "engines": {
+  "node": ">=20 <23"
+  },
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "next": "15.5.4",
