--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@ apps/**/dist/
 .DS_Store
 .vscode-test
 .terraform/
+infra/terraform/.terraform/
+infra/terraform/terraform.tfstate
+infra/terraform/terraform.tfstate.*
+infra/terraform/.keys/
+infra/terraform/secrets/*.tfvars
+!infra/terraform/secrets/*.enc.tfvars
