--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
 name: deploy
+
 on:
   workflow_dispatch:
     inputs:
@@ -6,13 +7,16 @@ on:
         type: choice
         options: [dev]
         default: dev
-  push:
-    branches: [main]
+
+concurrency:
+  group: deploy-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   deploy:
+    # nur vom main-Branch aus manuell starten
+    if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
-    # Bei workflow_dispatch: gewähltes env, bei push: 'dev'
     environment: ${{ github.event.inputs.env || 'dev' }}
     env:
       FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN_DEV || secrets.FLY_API_TOKEN }}
@@ -20,7 +24,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Optional (nicht zwingend für remote-only Build, aber ok)
       - uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
@@ -31,5 +34,5 @@ jobs:
 
       - uses: superfly/flyctl-actions/setup-flyctl@master
 
-      - name: Deploy
+      - name: Deploy to Fly.io
         run: flyctl deploy -a lokaltreu-dev --config fly.dev.toml --remote-only
