--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,9 @@
-﻿root = true
+root = true
 
 [*]
 end_of_line = lf
 insert_final_newline = true
+
+[*.{yml,yaml,json,ndjson,toml}]
 charset = utf-8
-indent_style = space
-indent_size = 2
+
