--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,20 +1,43 @@
 {
   "name": "@lokaltreu/api",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Lokaltreu API (ESM) mit OpenTelemetry",
+  "license": "ISC",
+  "type": "module",
+  "main": "./dist/index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
-    "test": "vitest run",
+    "dev": "tsx watch src/index.ts",
+    "start:dev": "npm run dev",
     "build": "tsc",
+    "clean": "rimraf dist",
     "start": "node dist/index.js",
+    "test": "vitest run",
     "lint": "eslint ."
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "type": "module",
+  "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.48.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.48.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.48.0",
+    "@opentelemetry/resources": "1.9.0",
+    "@opentelemetry/sdk-metrics": "1.9.0",
+    "@opentelemetry/sdk-node": "^0.48.0",
+    "@opentelemetry/semantic-conventions": "1.9.0",
+    "pino": "^10.0.0",
+    "pino-loki": "^2.6.0",
+    "tslib": "2.8.1"
+  },
   "devDependencies": {
-    "@vitest/coverage-v8": "^3.2.4",
-    "vitest": "^3.2.4"
+    "@types/node": "22.7.5",
+    "@vitest/coverage-v8": "3.2.4",
+    "rimraf": "6.0.1",
+    "tsx": "4.20.6",
+    "typescript": "5.9.3",
+    "vitest": "3.2.4"
   }
 }
+
+
