--- a/observability/loki/loki-config.yaml
+++ b/observability/loki/loki-config.yaml
@@ -1,14 +1,20 @@
 auth_enabled: false
 server: { http_listen_port: 3100 }
-common: { ring: { instance_addr: 127.0.0.1 }, path_prefix: /loki }
+common:
+  path_prefix: /loki
+  ring:
+    kvstore:
+      store: memberlist
 schema_config:
   configs:
     - from: 2020-10-24
       store: boltdb-shipper
-      object_store: filesystem   # PROD: R2-bucket (EU) per gateway
+      object_store: filesystem
       schema: v13
       index: { prefix: index_, period: 24h }
 storage_config:
   boltdb_shipper: { active_index_directory: /loki/index, cache_location: /loki/cache }
   filesystem: { directory: /loki/chunks }
+memberlist: {}
 limits_config: { ingestion_rate_mb: 4, ingestion_burst_size_mb: 16 }
+
