--- a/observability/otel/collector.yaml
+++ b/observability/otel/collector.yaml
@@ -1,12 +1,30 @@
 receivers:
   otlp:
-    protocols: { http: {}, grpc: {} }
+    protocols:
+      grpc:
+      http:
+
 processors:
-  batch: {}
+  batch:
+
 exporters:
-  logging: { loglevel: info }
+  otlp/tempo:
+    endpoint: tempo:4317
+    tls:
+      insecure: true
+  loki:
+    endpoint: http://loki:3100/loki/api/v1/push
+    tls:
+      insecure: true
+
 service:
   pipelines:
-    traces:   { receivers: [otlp], processors: [batch], exporters: [logging] }
-    metrics:  { receivers: [otlp], processors: [batch], exporters: [logging] }
-    logs:     { receivers: [otlp], processors: [batch], exporters: [logging] }
+    traces:
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [otlp/tempo]
+    logs:
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [loki]
+
