--- a/observability/tempo/tempo-config.yaml
+++ b/observability/tempo/tempo-config.yaml
@@ -1,8 +1,23 @@
-server: { http_listen_port: 3200, grpc_listen_port: 4317 }
-distributor: { receivers: { otlp: { protocols: { http: {}, grpc: {} } } } }
+server:
+  http_listen_port: 3200
+  grpc_listen_port: 0   # interne gRPC-Server-Ports deaktivieren; OTLP-gRPC läuft unten im Receiver
+
+distributor:
+  receivers:
+    otlp:
+      protocols:
+        http: {}
+        grpc: {}
+
 storage:
   trace:
     backend: local          # PROD: R2 (EU) via S3 API / Cloudflare R2
-    wal: { path: /tmp/tempo/wal }
-    local: { path: /tmp/tempo/blocks }
-compactor: { compaction: { block_retention: 48h } }
+    wal:
+      path: /tmp/tempo/wal
+    local:
+      path: /tmp/tempo/blocks
+
+compactor:
+  compaction:
+    block_retention: 48h
+
