obs: loki http_service + /var/loki storage; add Grafana Loki/Tempo datasources; adjust mounts

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,12 @@
-﻿.git
+.git
 node_modules
 .next/cache
 dist
 coverage
 tmp
+
+# Ensure lockfile and manifests are included
+!package-lock.json
+!apps/api/package.json
+!apps/web/package.json
+
