--- a/.github/workflows/obs-verify-nightly.yml
+++ b/.github/workflows/obs-verify-nightly.yml
@@ -13,4 +13,14 @@ jobs:
         shell: pwsh
         run: ./scripts/verify-bom-and-uid.ps1
 
+  pester:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run Pester
+        shell: pwsh
+        run: |
+          Install-Module Pester -Force -Scope CurrentUser
+          Invoke-Pester -Path .\tests\obs.tools.tests.ps1 -CI
+
 
