--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -35,6 +35,9 @@
       "problemMatcher": []
     },
     { "label": "obs:health:all", "type": "npm", "script": "obs:health:all" }
+    ,
+    { "label": "proxy:tempo", "type": "shell", "command": "flyctl proxy 3200:3200 -a lokaltreu-obs-tempo", "problemMatcher": [] },
+    { "label": "proxy:loki",  "type": "shell", "command": "flyctl proxy 3100:3100 -a lokaltreu-obs-loki",  "problemMatcher": [] }
   ]
 }
 
