--- a/apps/obs/loki/loki-config.yaml
+++ b/apps/obs/loki/loki-config.yaml
@@ -2,7 +2,7 @@ server:
   http_listen_port: 3100
 
 common:
-  path_prefix: /loki
+  path_prefix: /var/loki
   replication_factor: 1
   ring:
     kvstore:
@@ -20,13 +20,13 @@ schema_config:
 
 storage_config:
   boltdb_shipper:
-    active_index_directory: /loki/index
-    cache_location: /loki/boltdb-cache
+    active_index_directory: /var/loki/index
+    cache_location: /var/loki/boltdb-cache
     shared_store: filesystem
   filesystem:
-    directory: /loki/chunks
+    directory: /var/loki/chunks
 
 compactor:
-  working_directory: /loki/boltdb-shipper-compactor
+  working_directory: /var/loki/boltdb-shipper-compactor
   shared_store: filesystem
 
